// Copyright Â© 2021 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package childnewversion;

option go_package = "github.com/getamis/alice/crypto/bip32/childnewversion";

import "github.com/getamis/alice/crypto/ot/message.proto";
import "github.com/getamis/alice/crypto/circuit/message.proto";
import "github.com/getamis/alice/crypto/ecpointgrouplaw/point.proto";

message Round1Message {
    bytes NgarbledWireCKD = 1;
    ot.OtReceiverMessage otReceiverMsg = 2;
}

message Round2Message {
    ot.OtExtReceiveMessage otExtReceiveMsg =1;
}

message Round3Message {
    ot.OtExtSendResponseMessage otExtSResponse = 1;
}

message Round4Message {
    ecpointgrouplaw.EcPointMessage rG = 1;
}

message Round5Message {
    circuit.garbleCircuitMessage garcirMsg = 1;
}