// Copyright Â© 2021 AMIS Technologies
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package getamis.alice.crypto.ot;

option go_package = "github.com/getamis/alice/crypto/ot";

import "github.com/getamis/alice/crypto/ecpointgrouplaw/point.proto";
import "github.com/getamis/alice/crypto/binaryfield/message.proto";

message OtChallengeMessage {
    repeated bytes challenge = 1;
}

message OtReceiverMessage {
    bytes seed = 1;
    repeated ecpointgrouplaw.EcPointMessage bi = 2;
}

message OtSenderMessage  {
    ecpointgrouplaw.EcPointMessage z = 1;
    repeated bytes chall = 2;
    bytes gamma = 3;
}

message OtReceiverVerifyMessage {
    bytes ans = 1;
}

message OtDMatrixMessage {
    repeated bytes D = 1;
}

message OtDMessage {
    bytes D = 1;
}

message OtExtReceiveMessage {
    OtSenderMessage otSendMsg = 1;
    repeated bytes D = 2;
    repeated binaryfield.binaryMessage u = 3;
    repeated binaryfield.binaryMessage v = 4;
}

message OtExtSendResponseMessage {
    repeated bytes a0 = 1;
    repeated bytes a1 = 2;
    OtReceiverVerifyMessage otRecVerifyMsg= 3;
}